--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Parrainage</title>
+    <title>Parrainage ISTCPolytechnique</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -26,22 +27,59 @@
 
 <script>
     document.getElementById('uploadForm').addEventListener('submit', function (event) {
-        event.preventDefault(); //empêche le rechragement de la page
+        event.preventDefault(); //Empêche le rechragement de la page
 
         const fileParrains = document.getElementById('fileParrains').files[0];
-        const fileFilleuls = document.getElementById('fileFilleuls').file[0];
+        const fileFilleuls = document.getElementById('fileFilleuls').files[0];
 
         if(!fileParrains || !fileFilleuls){
             alert('Veuillez uploader les deux fichiers');
             return;
         } 
-// je crois qu'ici, on doit ajouter la logique qui nous permettra de traiter les fichier et générer le fichier de sortie
-        document.getElementById('result');
-        resultDiv.innerHTML = `<p> Fichier des parrains: ${fileParrains.name}</p>
-        <p>Fichier des filleuls: ${fileFilleuls.name}</p>
-        <p> Génération du ficier en cours...</p>`;
+        //Affichage des noms des fichiers et message de génération
+        const resultDiv = document.getElementById('result');
+        resultDiv.innerHTML = `<p> Fichier des parrains: ${fileParrains.name}</p>`
+                              `<P> Ficier des filleuls: ${fileFilleuls.name}</p>`
+                              `<p> Génération du ficier en cours...</p>`;
+        // Lire les fichiers
+        Promise.all([readFile(fileParrains), readFile(fileFilleuls)])
+        .then(([parrainsData, filleulsData])  => {
+            const outputData = generateOutput(parrainsData, filleulsData);
+            downloadOutput(outputData);
+        })
+       .catch(error =>{
+        console.error('Erreur lors de la lecture des ficiers:',error);
+        resultDiv.innerHTML += `<p> Erreur lors de la lecteure des fichiers.</p>`
+       });
 
     });
+    function readFile(file) {
+        return new Promise((resolve, reject) =>{
+            const reader = new FileReader();
+            reader.onload = (even) => {
+                const data = event.target.result;
+                const workbook = XLSX.read(data, { tpye: 'binary'});
+                const firstSheetName = workbook.firstSheetName[0];
+                const worksheet = workbook.Sheets[firstSheetName];
+                const jsonData = XLSX.utils.sheet_to_json(worksheet);
+                resolve(jsonData);
+            };
+            reader.onerror = (error) => reject(error);
+            reader.readAsBinaryString(file);
+        });
+    }
+    function generateOutput(parrainsData, filleulsData) {
+        const outputData = [];
+        filleulsData.forEach(filleul =>{
+            const parrain = randomChoice(parrainsData); //Choisir un parrain aléatoirement
+            outputData.push({...filleul, parrain: parrain.nom}); //Pour s'assurez que 'nom' est correcte
+        });
+        return outputData;
+    }
+    function randomChoice(array) {
+        const randomIndex = Math.floor(Math.random() * array.length);
+        return array[randomIndex];
+    }
     // traduction du code python en js
     function attribuerParrains(nouvelEtudiant, filiere) { 
         if(!(filiere in filieres)){
