--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1>Attribution Parrains et Filleuls</h1>
     <form id="uploadForm">
         <label for="fileParrain">Le fichier des parrains</label>
-        <input type="file" id="fileParrains"  accept=".csv, .Xlsx" required>
+        <input type="file" id="fileParrains"  accept=".csv, .Xlsx" required class="input-group">
 
         <label for="fileFilleuls">Le fichier des Filleuls:</label>
-        <input type="file" id="fileFilleuls" accept=".csv, .xlsv" required>
+        <input type="file" id="fileFilleuls" accept=".csv, .xlsv" required class="input-group">
 
         <button type="submit">Générer le fichier</button>
     </form>
