--- a/index.html
+++ b/index.html
@@ -26,93 +26,80 @@
 </html>
 
 <script>
-    document.getElementById('generate').addEventListener('click', function(){
+    document.getElementById('generate').addEventListener('click', function() { 
         const fileParrainsInput = document.getElementById('fileParrains');
         const fileFilleulsInput = document.getElementById('fileFilleuls');
+        // Vérifier si les fichiers sont sélectionnés
         if(fileParrainsInput.files.length === 0 || fileFilleulsInput.files.length === 0){
-            alert('Veuillez sélectionner les fichiers des parrains et des filleuls.');
+            alert('Veuillez sélectionner les fichiers des parrains et des filleuls');
             return;
         }
-        const fileParrains = fileParrainsInput.file[0]; // Utiliser le premier fichier
+        const fileParrains = fileParrainsInput.files[0];
         console.log('Fichier parrains:', fileParrains.name);
-        console.log('Fichier filleuls:', fileFilleuls.name)
-    })
-    document.getElementById('uploadForm').addEventListener('submit', function (event) {
-        event.preventDefault(); //Empêche le rechragement de la page
 
-        const fileParrains = document.getElementById('fileParrains').files[0];
-        if(fileParrains.file.length > 0){
-            console.log(fileParrainsInput.files[0].name)
-        }else{
-            console.log('Aucun fichier sélectionné.')
+        const fileFilleuls = fileFilleulsInput.files[0];
+        console.log('Fichier filleuls:', fileFilleuls.name);
+    });
+    document.getElementById('uploadForm').addEventListener('submit', function (event){
+        event.preventDefault(); // Empêche le rechargement de la page
+
+        const fileParrainsInput = document.getElementById('fileParrains');
+
+        const fileParrains = fileParrainsInput.files[0];
+        // Vérifier si le fichier des parrains et sélectionné
+        if(fileParrainsInput.files.length > 0){
+            console.log(fileParrains.name);
+        } else{
+            console.log('Aucun fichier sélectionné.');
         }
-        const fileFilleuls = document.getElementById('fileFilleuls').files[0];
 
+        const fileFilleuls = document.getElementById('fileFilleuls').files[0];
+        // Vérifier si les deux fichier son sélectionnés
         if(!fileParrains || !fileFilleuls){
             alert('Veuillez uploader les deux fichiers');
             return;
-        } 
-        //Affichage des noms des fichiers et message de génération
+        }
+
+        // Affichage des nom des fichiers et message de géneration
+
         const resultDiv = document.getElementById('result');
-        resultDiv.innerHTML = `<p> Fichier des parrains: ${fileParrains.name}</p>`
-                              `<P> Ficier des filleuls: ${fileFilleuls.name}</p>`
-                              `<p> Génération du ficier en cours...</p>`;
+        resultDiv.innerHTML = `<p> Fichier es parrains: ${fileParrains.name} </p>
+                               <p> Fichier des filleuls: ${fileFilleuls.name} </p>
+                               <p> Génération du fichier en cours...</p>`;
         // Lire les fichiers
+
         Promise.all([readFile(fileParrains), readFile(fileFilleuls)])
-        .then(([parrainsData, filleulsData])  => {
+        .then(([parrainsData, filleulsData]) =>{
             const outputData = generateOutput(parrainsData, filleulsData);
             downloadOutput(outputData);
         })
-       .catch(error =>{
-        console.error('Erreur lors de la lecture des ficiers:',error);
-        resultDiv.innerHTML += `<p> Erreur lors de la lecteure des fichiers.</p>`
-       });
-
+        .catch(error =>{
+            console.error('Erreur lors de la lecture des fichiers:', error);
+            resultDiv.innerHTML += `<p> Erreur lors de la lecture des fichiers.<p>`;
+        });
     });
-    function readFile(file) {
-        return new Promise((resolve, reject) =>{
+
+    function readFile(file){
+        return new Promise((resolve, reject) => {
             const reader = new FileReader();
-            reader.onload = (even) => {
-                const data = event.target.result;
-                const workbook = XLSX.read(data, { type: 'binary'});
-                const firstSheetName = workbook.SheetName[0];
-                const worksheet = workbook.Sheets[firstSheetName];
-                const jsonData = XLSX.utils.sheet_to_json(worksheet);
-                resolve(jsonData);
-            };
-            reader.onerror = (error) => reject(error);
-            reader.readAsBinaryString(file);
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = () => reject ('Erreur de lecture du fichier.');
+            reader.readAsText(file);
         });
     }
     function generateOutput(parrainsData, filleulsData) {
-        const outputData = [];
-        filleulsData.forEach(filleul =>{
-            const parrain = randomChoice(parrainsData); //Choisir un parrain aléatoirement
-            outputData.push({...filleul, parrain: parrain.nom}); //Pour s'assurez que 'nom' est correcte
-        });
-        return outputData;
+        // Implimente la logique pour générer les données de sortie
+        return "Données générées"
     }
-    function randomChoice(array) {
-        const randomIndex = Math.floor(Math.random() * array.length);
-        return array[randomIndex];
-    }
-    function downloadOutput(outputData) {
-        const worksheet = XLSX.utils.json_to_sheet(outputData);
-        const workbook = XLSX.utils.book_new();
-        XLSX.utils.book_append_sheet(workbook, worksheet, 'Attribution')
-        // Création du fichier a telecharger
-        XLSX.writeFile(workbook, 'attribution_parrains_filleuls.xlsx');
-        // Afficher un message de succès
-        const resultDiv = document.getElementById('result');
-        resultDiv.innerHTML += `<p> Fichier généré avec succès.</p>`;
-    }
-    // traduction du code python en js
-    function attribuerParrains(nouvelEtudiant, filiere) { 
-        if(!(filiere in filieres)){
-            console.log(`Erreur: La filière '${filiere}' n\existe pas. `);
-            return null;
-        }
-        const parrainMemeFiliere = randomChoice(filieres[filiere], nouvelleEtudiant);
-        const autresEtudiants = Object.keys(filieres).reduce(acc,f)
+    function downloadOutput(data) {
+        const blob = new Blob([data], { type: 'text/plain'});
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'output.txt';
+        document.body.appendChild(a)
+        a.click();
+        document.body.removeChild(a)
+        URL.revokeObjectURL(url);
     }
 </script>
