--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <h1>Attribution Parrains et Filleuls</h1>
+    <h1>Attribution Parrains et Filleuls <b>ISTC</b></h1>
     <form id="uploadForm">
         <label for="fileParrain">Le fichier des parrains</label>
         <input type="file" id="fileParrains"  accept=".csv, .Xlsx" required class="input-group">
@@ -22,7 +22,7 @@
     </form>
     <div id="result"></div>
     </div>
-    
+
     <script src="app.js"></script>
 </body>
 </html>
