ajoue tel_parrains

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <form id="uploadForm"> 
         <input type="file" id="fileParrains" accept=".csv" required>
         <input type="file" id="fileFilleuls" accept=".csv" required>
+        <input type="text" id="numeroParrain" placeholder="Numéro du Parrain">
         <button type="submit" id="generate">Générer</button>
     </form>
     <div id="result"></div>
