--- a/public/index.html
+++ b/public/index.html
@@ -1,143 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Parrainage ISTCPolytechnique</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <link
             rel="stylesheet"
             type="text/css"
             media="screen"
             href="./assets/style.css"
         />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
- 
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
         <div id="root"></div>
-        
-
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script>
-            document
-                .getElementById("generate")
-                .addEventListener("click", function () {
-                    const fileParrainsInput =
-                        document.getElementById("fileParrains");
-                    const fileFilleulsInput =
-                        document.getElementById("fileFilleuls");
-                    if (
-                        fileParrainsInput.files.length === 0 ||
-                        fileFilleulsInput.files.length === 0
-                    ) {
-                        alert(
-                            "Veuillez sélectionner les fichiers des parrains et des filleuls.",
-                        );
-                        return;
-                    }
-                    const fileParrains = fileParrainsInput.file[0]; // Utiliser le premier fichier
-                    console.log("Fichier parrains:", fileParrains.name);
-                    console.log("Fichier filleuls:", fileFilleuls.name);
-                });
-            document
-                .getElementById("uploadForm")
-                .addEventListener("submit", function (event) {
-                    event.preventDefault(); //Empêche le rechragement de la page
-
-                    const fileParrains =
-                        document.getElementById("fileParrains").files[0];
-                    if (fileParrains.file.length > 0) {
-                        console.log(fileParrainsInput.files[0].name);
-                    } else {
-                        console.log("Aucun fichier sélectionné.");
-                    }
-                    const fileFilleuls =
-                        document.getElementById("fileFilleuls").files[0];
-
-                    if (!fileParrains || !fileFilleuls) {
-                        alert("Veuillez uploader les deux fichiers");
-                        return;
-                    }
-                    //Affichage des noms des fichiers et message de génération
-                    const resultDiv = document.getElementById("result");
-                    resultDiv.innerHTML = `<p> Fichier des parrains: ${fileParrains.name}</p>``<P> Ficier des filleuls: ${fileFilleuls.name}</p>``<p> Génération du ficier en cours...</p>`;
-                    // Lire les fichiers
-                    Promise.all([
-                        readFile(fileParrains),
-                        readFile(fileFilleuls),
-                    ])
-                        .then(([parrainsData, filleulsData]) => {
-                            const outputData = generateOutput(
-                                parrainsData,
-                                filleulsData,
-                            );
-                            downloadOutput(outputData);
-                        })
-                        .catch((error) => {
-                            console.error(
-                                "Erreur lors de la lecture des ficiers:",
-                                error,
-                            );
-                            resultDiv.innerHTML += `<p> Erreur lors de la lecteure des fichiers.</p>`;
-                        });
-                });
-            function readFile(file) {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = (even) => {
-                        const data = event.target.result;
-                        const workbook = XLSX.read(data, { type: "binary" });
-                        const firstSheetName = workbook.SheetName[0];
-                        const worksheet = workbook.Sheets[firstSheetName];
-                        const jsonData = XLSX.utils.sheet_to_json(worksheet);
-                        resolve(jsonData);
-                    };
-                    reader.onerror = (error) => reject(error);
-                    reader.readAsBinaryString(file);
-                });
-            }
-            function generateOutput(parrainsData, filleulsData) {
-                const outputData = [];
-                filleulsData.forEach((filleul) => {
-                    const parrain = randomChoice(parrainsData); //Choisir un parrain aléatoirement
-                    outputData.push({ ...filleul, parrain: parrain.nom }); //Pour s'assurez que 'nom' est correcte
-                });
-                return outputData;
-            }
-            function randomChoice(array) {
-                const randomIndex = Math.floor(Math.random() * array.length);
-                return array[randomIndex];
-            }
-            function downloadOutput(outputData) {
-                const worksheet = XLSX.utils.json_to_sheet(outputData);
-                const workbook = XLSX.utils.book_new();
-                XLSX.utils.book_append_sheet(
-                    workbook,
-                    worksheet,
-                    "Attribution",
-                );
-                // Création du fichier a telecharger
-                XLSX.writeFile(workbook, "attribution_parrains_filleuls.xlsx");
-                // Afficher un message de succès
-                const resultDiv = document.getElementById("result");
-                resultDiv.innerHTML += `<p> Fichier généré avec succès.</p>`;
-            }
-            // traduction du code python en js
-            function attribuerParrains(nouvelEtudiant, filiere) {
-                if (!(filiere in filieres)) {
-                    console.log(
-                        `Erreur: La filière '${filiere}' n\existe pas. `,
-                    );
-                    return null;
-                }
-                const parrainMemeFiliere = randomChoice(
-                    filieres[filiere],
-                    nouvelleEtudiant,
-                );
-                const autresEtudiants = Object.keys(filieres).reduce(acc, f);
-            }
-        </script>
     </body>
 </html>
